@@ -4,9 +4,9 @@ Priority: extra
 Maintainer: Guillem Jover <guillem@debian.org>
 Build-Depends: debhelper (>= 7),
  autotools-dev, autoconf, automake, libtool, libltdl-dev, libz-dev,
- libncurses5-dev, libaa1-dev, libsvga1-dev [i386 amd64], libsdl1.2-dev,
+ libncurses5-dev, libaa1-dev, libsdl1.2-dev,
  libx11-dev, libxpm-dev, libice-dev, libsm-dev, libwxgtk2.8-dev, libgtk2.0-dev,
- libasound2-dev [linux-any]
+ libsvga1-dev [linux-any kfreebsd-any], libasound2-dev [linux-any]
 Build-Depends-Indep: iasl, bcc (>= 0.16.3-2), bin86 (>= 0.16.3-2),
  docbook-dsssl, gcc-multilib [any-amd64]
 Homepage: http://bochs.sourceforge.net/
@@ -103,7 +103,7 @@ Description: X11 plugin for Bochs
  This package contains an X11 GUI plugin for Bochs.
 
 Package: bochs-svga
-Architecture: i386 amd64
+Architecture: linux-any kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}, bochs (= ${binary:Version})
 Provides: bochs-gui
 Description: SVGA plugin for Bochs
