@@ -14,6 +14,8 @@ bochs (2.4.6-5) UNRELEASED; urgency=low
     - Split 00_base.patch into a local-config.patch and local-paths.patch.
   * Switch sb16ctrl-bochs to any-i386 instead of explicit arch list.
   * Clarify output on what's being done by debian/tarball.sh.
+  * Build bochs-svga on all architectures where svgalib is now available;
+    implies switching from i386 and amd64 to linux-any and kfreebsd-any.
 
  -- Guillem Jover <guillem@debian.org>  Thu, 29 Dec 2011 21:49:06 +0100
 
